tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_disallows_test_attribute_on_impl_method/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The `#[test]` attribute is disallowed on `impl` methods
  ┌─ src/main.nr:7:16
  │
7 │             fn foo() { }
  │                ---
  │

Aborting due to 1 previous error
